--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bunmi Osadare | WDD 130</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Bunmi Osadare | WDD 130</title> 
+  <meta name="description" content="bunmi osadare ,wdd130."> 
+  <meta name="author" content="bunmi osadare">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <header>
     <nav>
-      <a href="#">About Me</a>
+      <a href="#">Home</a>
+      <a href="wwr/">profile Website</a>
+      <a href="wwr/profile.html">profile</a>
     </nav>
   </header>
   <main>
@@ -16,15 +21,13 @@
     <img src="images/profile.jpg" alt=" Bunmi Osadare " width="200">
     <p>My name is Bunmi Osadare.l'm a devoted wife and mother of three kids.l have a strong passion for marriage counseling. Currently I'm an IT Auditor but on the path to transition into the field of cyber security. I have an unwavering faith in God which is the cornerstone of my life, providing me with strength and guidance in my personal and professional endeavors.</p>
   </main>
-  <footer> 
-  </main>
   <aside>
     <h2>Ibadan</h2>
     <img src="images/Ibadan.jpg" alt="Ibadan landscape">
     <p>Ibadan is a city in Oyo State, Nigeria, known for its rich history and diverse economy.It is situated in the southwestern part of the country and is known as the largest city in Nigeria by landmass.Founded in the 18th century, it's now a bustling metropolis with institutions of higher learning and transportation connections.Cultural heritage and historic sites like the Olubadan Palace and Cocoa House attract tourists.A blend of tradition and modernity makes Ibadan a unique and vibrant place to visit or live.</p>
   </aside>
-  <footer>   
-    <p>&copy;️ 2023 Bunmi Osadare | Ibadan,Nigeria</p>
+  <footer>
+    <p>&copy;2023 Bunmi Osadare | Ibadan,Nigeria</p>
   </footer>
 </body>
 </html>
