--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">  
 <title>Rafting Site Plan | Bunmi Osadare</title>  
 <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project."> 
-<meta name="Author" content="Bunmi Osadare">   
-<link rel="stylesheet" type="text/css" href="site-plan-rafting.css" >
+<meta name="author" content="Bunmi Osadare">   
 <link rel="stylesheet" href="styles/site-plan-rafting.css">   
 </head>  
 <body>
