--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 29th september 2023 --> 
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -13,15 +14,22 @@
     <nav>
       <a href="#">Home</a>
       <a href="wwr/">profile Website</a>
-      <a href="wwr/profile.html">profile</a>
+      <a href="wwr/profile.html">profile</a> 
+      <a href="https://linkedin.com">linkedin</a> 
+      <a href="https://facebook.com">facebook</a>
     </nav>
   </header>
   <main>
     <h1>Bunmi Osadare | WDD 130</h1>
     <img src="images/profile.jpg" alt=" Bunmi Osadare " width="200">
     <p>My name is Bunmi Osadare.l'm a devoted wife and mother of three kids.l have a strong passion for marriage counseling. Currently I'm an IT Auditor but on the path to transition into the field of cyber security. I have an unwavering faith in God which is the cornerstone of my life, providing me with strength and guidance in my personal and professional endeavors.</p>
+    <ul class="box">
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Philadelphia Pennsylvania Temple</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
+    </ul> 
   </main>
-  <aside>
+  <aside class="box">
     <h2>Ibadan</h2>
     <img src="images/Ibadan.jpg" alt="Ibadan landscape">
     <p>Ibadan is a city in Oyo State, Nigeria, known for its rich history and diverse economy.It is situated in the southwestern part of the country and is known as the largest city in Nigeria by landmass.Founded in the 18th century, it's now a bustling metropolis with institutions of higher learning and transportation connections.Cultural heritage and historic sites like the Olubadan Palace and Cocoa House attract tourists.A blend of tradition and modernity makes Ibadan a unique and vibrant place to visit or live.</p>
