--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="author" content="bunmi osadare">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body> 
+  <div class="grid">
   <header>
     <nav>
       <a href="#">Home</a>
@@ -18,7 +19,12 @@
       <a href="https://linkedin.com">linkedin</a> 
       <a href="https://facebook.com">facebook</a>
     </nav>
-  </header>
+  </header>  
+  <aside class="box">
+    <h2>Ibadan</h2>
+    <img src="images/Ibadan.jpg" alt="Ibadan landscape">
+    <p>Ibadan is a city in Oyo State, Nigeria, known for its rich history and diverse economy.It is situated in the southwestern part of the country and is known as the largest city in Nigeria by landmass.Founded in the 18th century, it's now a bustling metropolis with institutions of higher learning and transportation connections.Cultural heritage and historic sites like the Olubadan Palace and Cocoa House attract tourists.A blend of tradition and modernity makes Ibadan a unique and vibrant place to visit or live.</p>
+  </aside>
   <main>
     <h1>Bunmi Osadare | WDD 130</h1>
     <img src="images/profile.jpg" alt=" Bunmi Osadare " width="200">
@@ -28,14 +34,11 @@
       <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
       <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
     </ul> 
-  </main>
-  <aside class="box">
-    <h2>Ibadan</h2>
-    <img src="images/Ibadan.jpg" alt="Ibadan landscape">
-    <p>Ibadan is a city in Oyo State, Nigeria, known for its rich history and diverse economy.It is situated in the southwestern part of the country and is known as the largest city in Nigeria by landmass.Founded in the 18th century, it's now a bustling metropolis with institutions of higher learning and transportation connections.Cultural heritage and historic sites like the Olubadan Palace and Cocoa House attract tourists.A blend of tradition and modernity makes Ibadan a unique and vibrant place to visit or live.</p>
-  </aside>
+    </main> 
   <footer>
     <p>&copy;2023 Bunmi Osadare | Ibadan,Nigeria</p>
-  </footer>
+  </footer> 
+</div>
 </body>
 </html>
+
