--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,42 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Us | Rafting Adventures</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>About Us | Rafting Adventures</title>  
+    <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project."> 
+    <meta name="author" content="Bunmi Osadare">   
+    <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
 <body>
-    <header>
-        <img src="images/logo.png" alt="Rafting Adventures">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+    <header> 
+        <div class="header-grid">
+            <img src="images/logo.png" alt="Rafting Adventures">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact</a>
+            </nav> 
+        </div>
     </header>
 
-    <main>
+    <main class="home-grid"> 
         <div class="hero">
             <img src="images/hero.jpg" alt="Rafting Adventure">
             <h1>Rafting Adventures</h1>
+        
+            <article>
+                <img src="images/happy.jpg" alt="Happy Client">
+                <p>Our mission is simple: to provide safe, exciting, and memorable rafting experiences for people of all ages and skill levels. We strive to create lifelong connections between our customers, their families, and the natural world. By doing so, we hope to inspire a sense of stewardship for our environment and promote sustainable tourism practices. In short, we aim to be more than just a rafting company – we aspire to be guardians of the rivers we navigate and protectors</p>
+            </article>
         </div>
 
-        <article>
-            <img src="images/happy.jpg" alt="Happy Client">
-            <p>Our mission is to provide unforgettable rafting experiences for adventurers of all levels.</p>
-        </article>
-
-        <section>
+        <section class="history-section">
             <h2>History</h2>
-            <p>Founded in 2005, Rafting Adventures has been providing thrilling rafting experiences for over a decade.</p>
+            <p>We started out as a small, family-owned business way back in the early '90s. Back then, we were known as "Rafting," and we only offered half-day trips on the nearby Arkansas River. But as word got around about how much fun our guests had on our trips, we grew rapidly. Today, we offer multi-day expeditions throughout the western United States, including California, Oregon, and Utah. Along the way, we've picked up numerous awards from local and national organizations recognizing our commitment to environmental responsibility and customer satisfaction. And although we've grown significantly since those humble beginnings, we still maintain that same focus on quality, safety.</p>
         </section>
 
-        <section>
-            <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting1.jpg" alt="Rafting Adventure 1">
-            <img src="images/rafting2.jpg" alt="Rafting Adventure 2">
-            <img src="images/rafting3.jpg" alt="Rafting Adventure 3">
-            <img src="images/rafting4.jpg" alt="Rafting Adventure 4">
-            <img src="images/rafting5.jpg" alt="Rafting Adventure 5">
+        <section class="adventures-section">
+            <h2>Adventure Awaits You!</h2> 
+            <div class="adventures-grid">
+                <figure>
+                    <img src="images/rafting1.jpg" alt="Rafting Adventure 1"> 
+                    <figcaption>river</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting2.jpg" alt="Rafting Adventure 2"> 
+                    <figcaption>team</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting3.jpg" alt="Rafting Adventure 3"> 
+                    <figcaption>river</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting4.jpg" alt="Rafting Adventure 4"> 
+                    <figcaption>team</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting5.jpg" alt="Rafting Adventure 5"> 
+                    <figcaption>River</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
 
@@ -45,13 +68,13 @@
         <p>&copy; 2023 Rafting Adventures | bunmi osadare</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="Facebook">
+                <img src="images/facebook.png" alt="Facebook">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.svg" alt="Twitter">
+                <img src="images/twitter.png" alt="Twitter">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="Instagram">
+                <img src="images/instagram.png" alt="Instagram">
             </a>
         </nav>
     </footer>
