--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,7 +34,13 @@
 
         <section class="history-section">
             <h2>History</h2>
-            <p>We started out as a small, family-owned business way back in the early '90s. Back then, we were known as "Rafting," and we only offered half-day trips on the nearby Arkansas River. But as word got around about how much fun our guests had on our trips, we grew rapidly. Today, we offer multi-day expeditions throughout the western United States, including California, Oregon, and Utah. Along the way, we've picked up numerous awards from local and national organizations recognizing our commitment to environmental responsibility and customer satisfaction. And although we've grown significantly since those humble beginnings, we still maintain that same focus on quality, safety.</p>
+            <div class="content-container">
+                <p class="text-left">We started out as a small, family-owned business way back in the early '90s. Back then, we were known as "Rafting," and we only offered half-day trips on the nearby Arkansas River. But as word got around about how much fun our guests had on our trips, we grew rapidly. Today, we offer multi-day expeditions throughout the western United States, including California, Oregon, and Utah. </p>
+                <div class="image-container">
+                    <img src="images/history.jpg" alt="history" class="centered-image">
+                </div>
+                <p class="text-right">Along the way, we've picked up numerous awards from local and national organizations recognizing our commitment to environmental responsibility and customer satisfaction. And although we've grown significantly since those humble beginnings, we still maintain that same focus on quality, safety.</p>
+            </div>
         </section>
 
         <section class="adventures-section">
