--- a/quiz.html
+++ b/quiz.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Quiz</title> 
+    <title>Quiz Form</title> 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="HTML and CSS Quiz"> 
+    <meta name="description" content="Basic HTML and CSS Quiz"> 
     <meta name="author" content="bunmi osadare">
     <link rel="stylesheet" href="styles/quiz.css">
     
