--- a/quiz.html
+++ b/quiz.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Quiz Form</title> 
+    <title>Basic HTML and CSS Quiz</title> 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Basic HTML and CSS Quiz"> 
+    <meta name="description" content="Quiz page"> 
     <meta name="author" content="bunmi osadare">
     <link rel="stylesheet" href="styles/quiz.css">
     
 </head>
 <body>
     <div class="container">
-        <h1>HTML and CSS Quiz</h1>
+        <h1>Basic HTML and CSS Quiz</h1>
         <form>
             <div>
                 <label for="q1">Question 1: What does HTML stand for?</label>
