--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Basic HTML and CSS Quiz</title> 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Basic HTML and CSS Quiz"> 
+    <meta name="description" content="Basic HTML and CSS Quiz page"> 
     <meta name="author" content="bunmi osadare">
     <link rel="stylesheet" href="styles/quiz.css">
     
