--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Contact | Rafting Adventures</title>  
+    <title>Contact Rafting Adventures</title>  
     <meta name="description" content="Plan your next adventure with our expert rafting team. Experience the thrill of navigating breathtaking rapids and immerse yourself in the stunning natural surroundings. Contact us today to book your unforgettable river rafting experience."><meta name="author" content="Bunmi osadare">   
     <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
@@ -38,25 +38,33 @@
         </section>
 
         <section id="employees">
-            <h2>Our Employee</h2>
+            <h2>Our Employees</h2>
             <div class="employee">
-                <img src="images/employee1.jpg" alt="Employee 1">
-                <h3 class="name">John Doe</h3>
-                <p class="title">Rafting Guide</p>
-
+                <img class="employee-image" src="images/employee1.jpg" alt="Employee 1">
+                <h3 class="employee-name">John Doe</h3>
+                <p class="employee-title">Rafting Guide</p>
             </div>
             <div class="employee">
-                <img src="images/employee2.jpg" alt="Employee 2">
-                <h3 class="name">Jane Smith</h3>
-                <p class="title">Customer Support</p>
+                <img class="employee-image" src="images/employee2.jpg" alt="Employee 2">
+                <h3 class="employee-name">Jane Smith</h3>
+                <p class="employee-title">Customer Support</p>
+            </div>
+            <div class="employee">
+                <img class="employee-image" src="images/employee3.jpg" alt="Employee 3">
+                <h3 class="employee-name">Mary Johnson</h3>
+                <p class="employee-title">Sales Representative</p>
+            </div>
+            <div class="employee">
+                <img class="employee-image" src="images/employee4.jpg" alt="Employee 4">
+                <h3 class="employee-name">Michael Brown</h3>
+                <p class="employee-title">Marketing Specialist</p>
+            </div>
+            <div class="employee">
+                <img class="employee-image" src="images/employee5.jpg" alt="Employee 5">
+                <h3 class="employee-name">Sarah Davis</h3>
+                <p class="employee-title">Graphic Designer</p>
+            </div>
             
-            </div>
-            <div class="employee">
-                <img src="images/employee3.jpg" alt="Employee 3">
-                <h3 class="name">Mary Johnson</h3>
-                <p class="title">Sales Representative</p>
-
-            </div>
         </section>
 
         <section id="contact-form">
