--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,7 +28,7 @@
         
             <article>
                 <img src="images/happy.jpg" alt="Happy Client">
-                <p>Our mission is simple: to provide safe, exciting, and memorable rafting experiences for people of all ages and skill levels. We strive to create lifelong connections between our customers, their families, and the natural world. By doing so, we hope to inspire a sense of stewardship for our environment and promote sustainable tourism practices. In short, we aim to be more than just a rafting company – we aspire to be guardians of the rivers we navigate and protectors</p>
+                <p>Our mission is simple: to provide safe, exciting, and memorable rafting experiences for people of all ages and skill levels. We strive to create lifelong connections between our customers, their families, and the natural world.</p>
             </article>
         </div>
 
