--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -101,12 +101,20 @@
         <p>&copy; 2023 Rafting Adventures | bunmi osadare</p> 
    
         <nav class="Wireframe">
- 
-            <a href="https://raw.githubusercontent.com/Osadare/wdd130/main/images/Wireframe.jpg">                 
-                <img src="images/Wireframe.jpg" alt="Wireframe">
-            </a>
-        </nav>  
-        
+            <nav class="sociallinks">
+                <a href="https://facebook.com">
+                    <img src="images/facebook.png" alt="Facebook">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/twitter.png" alt="Twitter">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/instagram.png" alt="Instagram">
+                </a> 
+                <a href="https://raw.githubusercontent.com/Osadare/wdd130/main/images/Wireframe.jpg">                 
+                    <img src="Wireframe" alt="Wireframe"> 
+            </nav>
+              
     </footer>
 </body>
 </html>
