--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -99,7 +99,7 @@
 
     <footer>
         <p>&copy; 2023 Rafting Adventures | bunmi osadare</p> 
-   
+    
         <nav class="Wireframe">
             <nav class="sociallinks">
                 <a href="https://facebook.com">
@@ -111,10 +111,11 @@
                 <a href="https://instagram.com">
                     <img src="images/instagram.png" alt="Instagram">
                 </a> 
-                <a href="https://raw.githubusercontent.com/Osadare/wdd130/main/images/Wireframe.jpg">                 
+                <a href="https://raw.githubusercontent.com/Osadare/wdd130/main/images/Wireframe.jpg">
                     <img src="Wireframe" alt="Wireframe"> 
+                </a>
             </nav>
-              
+        </nav>
     </footer>
-</body>
-</html>
+    </body>
+    </html>
