--- a/wwr/index.html
+++ b/wwr/index.html
@@ -62,22 +62,25 @@
             </div>
         </section>
     </main>
-    
     <footer>
-        <p>&copy; 2023 Rafting Adventures | bunmi osadare</p>
-        <nav class="sociallinks">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="Facebook">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="Twitter">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
-        </nav> 
-        <a href="https://raw.githubusercontent.com/Osadare/wdd130/main/wwr/images/wireframedesign.jpg">
-        <img src="wireframedesign">Wireframe Design link </a>
+        <p>&copy; 2023 Rafting Adventures | bunmi osadare</p> 
+    
+        <nav class="Wireframe">
+            <nav class="sociallinks">
+                <a href="https://facebook.com">
+                    <img src="images/facebook.png" alt="Facebook">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/twitter.png" alt="Twitter">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/instagram.png" alt="Instagram">
+                </a> 
+                <a href="https://raw.githubusercontent.com/Osadare/wdd130/main/images/Wireframe.jpg">
+                    <img src="images/Wireframe" alt="Wireframe"> 
+                </a>
+            </nav>
+        </nav>
     </footer>
-</body>
-</html>
+    </body>
+    </html>
