--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Trips and Adventures</title>
+    <title>Trips and Adventures co</title>
     <meta name="description" content="Explore our exciting rafting trips and adventures. Contact us to book your spot."> 
     <meta name="author" content="Bunmi Osadare"> 
     <link rel="stylesheet" href="styles/rafting.css"> 
