--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Contact Rafting Adventures</title>  
+    <title>Contact Rafting company</title>  
     <meta name="description" content="Plan your next adventure with our expert rafting team. Experience the thrill of navigating breathtaking rapids and immerse yourself in the stunning natural surroundings. Contact us today to book your unforgettable river rafting experience."><meta name="author" content="Bunmi osadare">   
     <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
